# misc

./: .gitignore  MyTotalTerminal  README  boost-1_47_0-to-1_48_0.patch  calculator.cpp  cleaner.rb  compiletime_fizzbuzz.cpp  gems-transfer.rb  get1tweet.rb  google_progress.rb  gvimrc  keymap.txt  ks  latex2pdf  nth_root.cpp  oulogin  private.xml  restore_win_names.rb  tweet-at.rb  vimrc  顔文字辞書.txt
.github/workflows/: actionlint.yaml  db_tutorial.yaml  test.yaml  tmp.yaml
adventofcode/2021/: 01_1.rs  01_2.rs  02_1.rs  02_2.rs  03_1.rs  03_2.rs  04_1.rs  04_2.rs  05_1.rs  05_2.rs  06_1.rs  07_2.rs  09_1.rs  10_1.rs  10_2.rs  11_1.rs  11_2.rs  12_1.rs  12_2.rs  13_1.rs  13_2.rs  14.rs  15_1.rs  15_2.rs  16_1.rs  16_2.rs  17_1.rs  17_2.rs  18_1.rs  18_2.rs  19.rs  19_1.rs  19_2.rs  19_fast.rs  20.rs  21_1.rs  21_2.rs  22_1.rs  22_2.rs  23_1.rs  (+5 more)
adventofcode/2021/01_1/: main.rs
adventofcode/2021/data/: 10.txt  16.txt
adventofcode/2021/src/: 01_2.rs  02_1.rs  02_2.rs  03_1.rs  03_2.rs  04_1.rs  05_2.rs  06_2.rs  07_1.rs  08_1.rs  08_2.rs  09_2.rs
adventofcode/2022/: .gitignore  1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml  Makefile  README.md
adventofcode/2022/src/: lib.rs
adventofcode/2023/: .gitignore  1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml  Makefile  README.md
adventofcode/2024/: .rustfmt.toml  1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml  Makefile  README.md
adventofcode/2025/: .gitignore  .rustfmt.toml  1.rs  10.rs  11.rs  12.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml  Makefile  README.md
adventofcode/2025/vis/: 9.py  requirements.txt
chibigrep/: README.md
d3d12/: .gitignore
d3d12/HelloWorld/: .gitignore  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  app.cpp  app.h  cb.h  color_target.cpp  color_target.h  command_list.cpp  command_list.h  compile_flags.txt  constantbuffer.cpp  constantbuffer.h  depth_target.h  descriptor.cpp  descriptor.h  fence.h  ib.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  pool.h  tex_vs.hlsl  texture.cpp  texture.h  vb.cpp  vb.h  vs.hlsl
db_tutorial/: Cargo.toml  README.md
db_tutorial/src/: main.rs
doc/: Object.html  README.html  created.rid  get1tweet_rb.html  index.html  oulogin.html  table_of_contents.html
doc/js/: search_index.js
docs/mhwsgac/: index.html  index.js  style.css
docs/rust-wasm-lifegame/: 0.bootstrap.js  bootstrap.js
dump-markdown-ast/: Cargo.toml  README.md  input_example.md  output_example.json
euler/: README.md  euler1.hs  euler10.hs  euler11.hs  euler14.hs  euler16.hs  euler19.vim  euler20.hs  euler21.cpp  euler28.hs  euler4.cpp  euler4.hs  euler5.hs  euler6.c  euler6.hs  euler7.hs  euler8.cpp  euler9.hs
generate_go_code/: go.mod
go_ast/: .gitignore  README.md  go.mod  main.go
go_xml/: go.mod  main.go  test.xml
google_im_icon_changer/: google_im_icon_change.sh
iced/: Cargo.toml  README.md
iced/src/: counter.rs  image_viewer.rs  pomodoro.rs
lockfree_queue_in_32bits/: Makefile  README.md  queue.c  queue.h  test.c
mhwsgac/: .gitignore  .prettierrc.json  deploy.bash  index.html  index.ts  package-lock.json  package.json  pico.colors.css  pico.css  style.css  tsconfig.json
old/: Guardfile  compiletime_fizzbuzz.cpp  gcc-4.6.0-to-4.6.3.patch  gcc.rb  gcc4.6.0-to-gcc4.6.2.patch  mpl_fizzbuzz.cpp  nth_root.cpp  tweetvim-post-merge-hook.sh
raytracing/: .gitignore  Cargo.toml  README.md
rust-app-kit-trial/: Cargo.toml
rust-app-kit-trial/src/: main.rs
rust-by-examples/: Guardfile  cast.rs  function.rs  hello_world.rs  primitives.rs  variable_bindings.rs
rust-wasm-async/: Cargo.toml
rust-wasm-tutorial/: deploy.sh
rust-webview/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json
rust/byteorder/: Cargo.toml
rust/byteorder/benches/: bench.rs
rust/byteorder/examples/: test.rs
rust_bench/glyph_rasterize/: Cargo.toml  README.md
rust_bench/glyph_rasterize/benches/: rasterize.rs
rust_bench/markdown-parser/: .gitignore  Cargo.toml  README.md
rust_bench/markdown-parser/benches/: bench.rs
rust_bench/markdown-parser/formula/: cmake3.rb
rust_bench/simd_blend_bench/: Cargo.toml
rust_bench/simd_blend_bench/benches/: bench.rs
rust_bench/sorted_vec_vs_vecdeque/: Cargo.toml  README.md
rust_bench/sorted_vec_vs_vecdeque/benches/: bench.rs
rust_bench/sorted_vec_vs_vecdeque/src/: lib.rs
scala/: README.md  calc.scala  complex.scala  generics.scala  timer.scala  trait.scala
sdl2/: README.md
sleep/: index.html  index.js  sw.js
slides/: clang-format.md
sync-offscreencanvas/: index.html  main.js  renderer.js
tauri-trial/: package.json
tree_sitter/calc/: Cargo.toml
tree_sitter/calc/src/: main.rs
webgl-tutorial/: .gitignore  README.md  blur.frag  cover.html  deploy.bash  depth.frag  depth.vert  eslint.config.mjs  filter.frag  frame.frag  frame.vert  index.html  minMatrix.js  mirror.frag  mirror.vert  package-lock.json  package.json  script.js  script.ts  shader.frag  shader.vert  tsconfig.json
wgpu/: Cargo.toml  README.md
wgpu/2022/: Cargo.toml  README.md
wgpu/2022/src/: model.rs
wgpu/2026/: Cargo.toml
wgpu/2026/src/: main.rs
writing_os_in_1000_lines/: Makefile  README.md  common.c  common.h  env.bash  env.sh  fs.c  kernel.c  kernel.h  kernel.ld  proc.c  run.bash  shell.c  stdlib.c  user.c  user.h  user.ld
ziglings/: .gitignore  05_arrays2.zig  06_strings.zig  08_quiz.zig  14_while4.zig  16_for2.zig  17_quiz2.zig  18_functions.zig  19_functions2.zig  22_errors2.zig  23_errors3.zig  24_errors4.zig  25_errors5.zig  28_defer2.zig  29_errdefer.zig  31_switch2.zig  33_iferror.zig  34_quiz4.zig  35_enums.zig  README.md  check.sh  copy.sh  fizzbuzz.zig
zstd/: Cargo.toml
(+320 files in other folders)
