[package]
name = "iced_study"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "counter"
path = "src/counter.rs"

[[bin]]
name = "pomodoro"
path = "src/pomodoro.rs"

[[bin]]
name = "image-viewer"
path = "src/image_viewer.rs"

[dependencies]
dirs = "5.0.1"
iced = { version = "0.13.1", features = ["tokio", "image", "advanced"] }
