[package]
name = "rust-app-kit-trial"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.5.2"

[dependencies.objc2-app-kit]
version = "0.2.2"
features = [
    "NSResponder",
    "NSApplication",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusItem",
    "NSButton",
    "NSControl",
    "NSStatusBarButton",
    "NSView",
    "NSMenu",
    "NSMenuItem",
]

[dependencies.objc2-foundation]
version = "0.2.2"
features = [
    "NSNotification",
    "NSString",
    "NSObject",
    "NSThread",
    "NSTimer",
    "NSDate",
    "NSRunLoop",
]
