[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01_1"
path = "01_1.rs"

[[bin]]
name = "01_2"
path = "01_2.rs"

[[bin]]
name = "02_1"
path = "02_1.rs"

[[bin]]
name = "02_2"
path = "02_2.rs"

[[bin]]
name = "03_1"
path = "03_1.rs"

[[bin]]
name = "03_2"
path = "03_2.rs"

[[bin]]
name = "04_1"
path = "04_1.rs"

[[bin]]
name = "04_2"
path = "04_2.rs"

[[bin]]
name = "05_1"
path = "05_1.rs"

[[bin]]
name = "05_2"
path = "05_2.rs"

[[bin]]
name = "06_1"
path = "06_1.rs"

[[bin]]
name = "06_2"
path = "06_2.rs"

[[bin]]
name = "07_1"
path = "07_1.rs"

[[bin]]
name = "07_2"
path = "07_2.rs"

[[bin]]
name = "08_1"
path = "08_1.rs"

[[bin]]
name = "08_2"
path = "08_2.rs"

[[bin]]
name = "09_1"
path = "09_1.rs"

[[bin]]
name = "09_2"
path = "09_2.rs"

[dependencies]
