[package]
name = "byteorder_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "test"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
byteorder = "1.4.3"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"
