[package]
name = "markdown-parser"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
cmark-gfm = "0.1.1"
comrak = { version = "0.39.1", default-features = false, features = [] }
markdown = "1.0.0"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }

[dev-dependencies]
criterion = "0.6.0"
