[package]
name = "simd_blend_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
packed_simd = { version = "0.3.6", package = "packed_simd_2" }

[dev-dependencies]
criterion = "0.3.5"
