[package]
name = "sorted_vec_vs_vecdeque"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"
