[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
crossterm = "0.23.2"
tree-sitter = "0.20.6"
tree-sitter-calc = { path = "../tree-sitter-calc" }
tui = "0.18.0"
unicode-width = "0.1.9"
