[package]
name = "my_wgpu_trial"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "my_wgpu_trial"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "triangle"
path = "src/triangle_example.rs"

[[bin]]
name = "texture"
path = "src/texture_example.rs"

[[bin]]
name = "instances"
path = "src/instances_example.rs"

[dependencies]
anyhow = "1.0.52"
bytemuck = { version = "1.7.3", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.14"
pollster = "0.2.4"
tobj = "3.2.0"
wgpu = "0.12.0"
winit = "0.26.0"
